--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -14,6 +14,214 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "images = \"../data/01_raw/hateful_memes/img\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pytorch_lightning as pl\n",
+    "from torch.utils.data import random_split, DataLoader\n",
+    "from typing import Optional\n",
+    "\n",
+    "# Note - you must have torchvision installed for this example\n",
+    "from torchvision.datasets import MNIST\n",
+    "from torchvision import transforms\n",
+    "\n",
+    "\n",
+    "class Memes(pl.LightningDataModule):\n",
+    "    def __init__(self, data_dir: str = \"./\", batch_size=32):\n",
+    "        super().__init__()\n",
+    "        self.batch_size = batch_size\n",
+    "        self.data_dir = data_dir\n",
+    "        self.transform = transforms.Compose([\n",
+    "            transforms.ToTensor(), \n",
+    "            transforms.Resize((224, 224, 3))\n",
+    "        ])\n",
+    "        \n",
+    "        # self.transform = transforms.Compose([transforms.ToTensor(), transforms.Normalize((0.1307,), (0.3081,))])\n",
+    "\n",
+    "        # Setting default dims here because we know them.\n",
+    "        # Could optionally be assigned dynamically in dm.setup()\n",
+    "        self.dims = (3, 224, 224)\n",
+    "\n",
+    "    def prepare_data(self):\n",
+    "        # download\n",
+    "        MNIST(self.data_dir, train=True, download=True)\n",
+    "        MNIST(self.data_dir, train=False, download=True)\n",
+    "\n",
+    "    def setup(self, stage: Optional[str] = None):\n",
+    "\n",
+    "        # Assign train/val datasets for use in dataloaders\n",
+    "        if stage == \"fit\" or stage is None:\n",
+    "            mnist_full = MNIST(self.data_dir, train=True, transform=self.transform)\n",
+    "            self.mnist_train, self.mnist_val = random_split(mnist_full, [55000, 5000])\n",
+    "\n",
+    "            # Optionally...\n",
+    "            # self.dims = tuple(self.mnist_train[0][0].shape)\n",
+    "\n",
+    "        # Assign test dataset for use in dataloader(s)\n",
+    "        if stage == \"test\" or stage is None:\n",
+    "            self.mnist_test = MNIST(self.data_dir, train=False, transform=self.transform)\n",
+    "\n",
+    "            # Optionally...\n",
+    "            # self.dims = tuple(self.mnist_test[0][0].shape)\n",
+    "\n",
+    "    def train_dataloader(self):\n",
+    "        return DataLoader(self.mnist_train, batch_size=self.batch_size)\n",
+    "\n",
+    "    def val_dataloader(self):\n",
+    "        return DataLoader(self.mnist_val, batch_size=self.batch_size)\n",
+    "\n",
+    "    def test_dataloader(self):\n",
+    "        return DataLoader(self.mnist_test, batch_size=self.batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "data_loader = torch.utils.data.DataLoader(\"../data/01_raw/hateful_memes/img\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "next(data_loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import Union\n",
+    "from pathlib import Path\n",
+    "import pandas as pd\n",
+    "from skimage import io, transform\n",
+    "\n",
+    "\n",
+    "class Memes(torch.utils.data.Dataset):\n",
+    "    def __init__(self, root_dir: str, transform=None):\n",
+    "        self.root_dir = Path(root_dir)\n",
+    "        self.transform = transform\n",
+    "\n",
+    "        self.info = pd.read_json(self.root_dir/\"train.jsonl\", lines=True)\n",
+    "        for \n",
+    "        # self.imgs = \n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return len(self.info)\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        if torch.is_tensor(idx):\n",
+    "            idx = idx.tolist()\n",
+    "\n",
+    "        data = self.info.iloc[idx]\n",
+    "        img_path = self.root_dir/data['img']\n",
+    "        image = io.imread(img_path)\n",
+    "\n",
+    "        text = data['text']\n",
+    "        label = data['label']\n",
+    "\n",
+    "        sample = dict(\n",
+    "            image=image,\n",
+    "            text=text,\n",
+    "            label=label,\n",
+    "        )\n",
+    "\n",
+    "        if self.transform:\n",
+    "            self.transform(sample)\n",
+    "        return sample\n",
+    "            \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "fig = plt.figure()\n",
+    "ds = Memes(\"../data/01_raw/hateful_memes\")\n",
+    "print(ds[0])\n",
+    "for i in range(len(ds)):\n",
+    "    sample = ds[i]\n",
+    "\n",
+    "    print(i, sample['image'].shape, sample['landmarks'].shape)\n",
+    "\n",
+    "    ax = plt.subplot(1, 4, i + 1)\n",
+    "    plt.tight_layout()\n",
+    "    ax.set_title('Sample #{}'.format(i))\n",
+    "    ax.axis('off')\n",
+    "    show_landmarks(**sample)\n",
+    "\n",
+    "    if i == 3:\n",
+    "        plt.show()\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_json(\"../data/01_raw/hateful_memes/train.jsonl\", lines=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bad_images = []\n",
+    "print(len(df))\n",
+    "for i in df['img']:\n",
+    "    try:\n",
+    "        io.imread(f\"../data/01_raw/hateful_memes/{i}\")\n",
+    "    except:\n",
+    "        bad_images.append(i)\n",
+    "print(len(bad_images))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(bad_images[0:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
