--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -44,7 +44,32 @@
    "source": [
     "total = len(df)\n",
     "positives = sum(df['label'])\n",
-    "print(f\"{positives}/{total} - {positives/total}\")"
+    "print(f\"{positives}/{total} - {positives/total}\")\n",
+    "\n",
+    "print(f\"{total-positives}/{total} - {1- (positives/total)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_length = 0\n",
+    "lengths = []\n",
+    "for item in df['text']:\n",
+    "    lengths.append(len(item))\n",
+    "    max_length = max(max_length, len(item))\n",
+    "print(f\"Max length: {max_length}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(sorted(lengths))"
    ]
   },
   {
