--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -33,7 +33,7 @@
     "from torchvision import transforms\n",
     "\n",
     "\n",
-    "class Memes(pl.LightningDataModule):\n",
+    "class Memes_PL(pl.LightningDataModule):\n",
     "    def __init__(self, data_dir: str = \"./\", batch_size=32):\n",
     "        super().__init__()\n",
     "        self.batch_size = batch_size\n",
@@ -118,7 +118,6 @@
     "        self.transform = transform\n",
     "\n",
     "        self.info = pd.read_json(self.root_dir/\"train.jsonl\", lines=True)\n",
-    "        for \n",
     "        # self.imgs = \n",
     "\n",
     "    def __len__(self):\n",
@@ -156,22 +155,31 @@
     "import matplotlib.pyplot as plt\n",
     "fig = plt.figure()\n",
     "ds = Memes(\"../data/01_raw/hateful_memes\")\n",
-    "print(ds[0])\n",
+    "# print(ds[0])\n",
     "for i in range(len(ds)):\n",
-    "    sample = ds[i]\n",
+    "    sample = ds[i+10]\n",
     "\n",
-    "    print(i, sample['image'].shape, sample['landmarks'].shape)\n",
+    "    print(i, sample['image'].shape, sample['text'])\n",
+    "    # print(sample)\n",
     "\n",
-    "    ax = plt.subplot(1, 4, i + 1)\n",
+    "    ax = plt.subplot(1, 2, i + 1)\n",
     "    plt.tight_layout()\n",
     "    ax.set_title('Sample #{}'.format(i))\n",
     "    ax.axis('off')\n",
-    "    show_landmarks(**sample)\n",
+    "    plt.imshow(sample['image'])\n",
+    "    # show_landmarks(**sample)\n",
     "\n",
-    "    if i == 3:\n",
+    "    if i == 1:\n",
     "        plt.show()\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
