Starting to fill out test notebook, fixed fairseq dependency, committing changes to OFA fork.

--- a/notebooks/ofa_simple.ipynb
+++ b/notebooks/ofa_simple.ipynb
@@ -8,15 +8,15 @@
    "source": [
     "import torch\n",
     "import numpy as np\n",
-    "from fairseq import utils,tasks\n",
-    "from fairseq import checkpoint_utils\n",
+    "from models.OFA.fairseq import utils,tasks\n",
+    "from models.OFA.fairseq import checkpoint_utils\n",
     "from models.OFA.utils.eval_utils import eval_step\n",
-    "from models.OFA.tasks.mm_tasks.caption import CaptionTask\n",
+    "from models.OFA.tasks.mm_tasks.snli_ve import SnliVeTask\n",
     "from models.OFA.models.ofa import OFAModel\n",
     "from PIL import Image\n",
     "\n",
-    "# Register caption task\n",
-    "tasks.register_task('caption',CaptionTask)\n",
+    "# Register visual entailment task\n",
+    "tasks.register_task('vis_ent', SnliVeTask)\n",
     "\n",
     "# turn on cuda if GPU is available\n",
     "use_cuda = torch.cuda.is_available()\n",
@@ -29,7 +29,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Load checkpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test loading meme-dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test pre-processing meme-dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Test training on meme-dataset"
+   ]
   }
  ],
  "metadata": {
@@ -42,7 +71,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.11"
   },
   "orig_nbformat": 4
