--- a/notebooks/data.ipynb
+++ b/notebooks/data.ipynb
@@ -77,6 +77,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "len(lengths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -99,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
