Adding model to trianing.

--- a/notebooks/loader.ipynb
+++ b/notebooks/loader.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hateful_memes.data.hateful_memes import MaeMaeDataset\n",
+    "from hateful_memes.data.hateful_memes import MaeMaeDataset, MaeMaeDataModule\n",
     "from PIL import Image\n",
     "from torchvision import transforms as T"
    ]
@@ -43,6 +43,56 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "data = MaeMaeDataModule(\"../data/01_raw/hateful_memes\")\n",
+    "data.setup('None')\n",
+    "train, val, test = data.train_dataset, data.val_dataset, data.test_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_s = set(train.info['id'])\n",
+    "val_s = set(val.info['id'])\n",
+    "test_s = set(test.info['id'])\n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_s.intersection(val_s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_s.intersection(test_s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_s.intersection(test_s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -72,7 +122,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4
  },
