--- a/notebooks/loader.ipynb
+++ b/notebooks/loader.ipynb
@@ -93,7 +93,22 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from icecream import ic\n",
+    "data = MaeMaeDataModule(\"../data/01_raw/hateful_memes\", batch_size=2)\n",
+    "data.setup('None')\n",
+    "item = next(iter(data.train_dataset))\n",
+    "ic(item)"
+   ]
   },
   {
    "cell_type": "code",
